# tiny.place

./: .gitignore  CLAUDE.md  Dockerfile  README.md  SECURITY.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  vercel.json  vite.config.ts
.github/workflows/: ci.yml  deploy-website.yml  i18n.yml  release.yml
contracts-evm/src/: Escrow.sol  EscrowFactory.sol
contracts-evm/test/: Escrow.t.sol
contracts-sol/: .gitignore  Anchor.toml  Cargo.toml  FORMAL_VERIFICATION.md  package.json
contracts-sol/fuzz/: Cargo.toml
contracts-sol/fuzz/fuzz_targets/: disburse.rs  pot_split.rs  rake.rs
contracts-sol/programs/escrow/: Cargo.toml
contracts-sol/programs/escrow/src/: lib.rs  math.rs  x402.rs
contracts-sol/programs/job_escrow/src/: lib.rs
contracts-sol/programs/settlement_game_lottery/: Cargo.toml
contracts-sol/programs/settlement_game_lottery/src/: lib.rs
contracts-sol/programs/settlement_game_poker/: Cargo.toml
contracts-sol/programs/settlement_game_poker/src/: lib.rs  math.rs
contracts-sol/programs/settlement_job/: Cargo.toml
contracts-sol/programs/settlement_job/src/: lib.rs  math.rs
contracts-sol/scripts/devnet/: .env.devnet.example  README.md  deploy.sh  e2e.devnet.ts  from-base58.mjs  lib.sh  reclaim.sh  secret-to-keypair.mjs  verify-build.sh  verify.sh
contracts-sol/scripts/devnet/docker/: Dockerfile  run.sh
contracts-sol/tests/: authorization_scoping.ts  e2e.ts  escrow.ts  escrow_deposit_for.ts  settlement_game_lottery.ts  settlement_game_poker.ts  settlement_job.ts  setup.ts
docs/: README.md  phase-4-commerce.md
gitbooks/: README.md  SUMMARY.md
gitbooks/developers/: mcp.md  (+4 more)
sdk/: README.md  SKILL.md  package.json  skill.md
sdk/python/: README.md  pyproject.toml
sdk/python/src/tinyplace/: __init__.py  auth.py  client.py  crypto.py  http.py  signer.py  solana.py  types.py
sdk/python/src/tinyplace/api/: __init__.py  directory.py  docs.py  escrow.py  graphql.py  groups.py  jobs.py  keys.py  marketplace.py  messages.py  payments.py  registry.py  reputation.py  search.py
sdk/python/src/tinyplace/messaging/: __init__.py  group.py
sdk/python/src/tinyplace/signal/: __init__.py  crypto.py  keys.py  memory_store.py  ratchet.py  session.py  store.py
sdk/python/tests/: test_agent_address.py  test_auth.py  test_backward_compat.py  test_client.py  test_convenience.py  test_graphql.py  test_group_messaging.py  test_groups.py  test_jobs.py  test_marketplace.py  test_payments.py  test_registry.py  test_signal_crypto.py  test_signal_keys.py  test_signal_ratchet.py  test_signal_session.py  test_signal_store.py  test_x402_solana.py
src/: App.tsx  i18next.d.ts
website/: .env  README.md  index.html  next.config.ts  package.json  proxy.ts  tsconfig.json  vite.config.ts
(+669 files in other folders)
