[package]
name = "contracts-sol-fuzz"
version = "0.0.0"
edition = "2021"
publish = false

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
escrow = { path = "../programs/escrow" }
settlement_job = { path = "../programs/settlement_job" }

[[bin]]
name = "disburse"
path = "fuzz_targets/disburse.rs"
test = false
doc = false
bench = false

[[bin]]
name = "rake"
path = "fuzz_targets/rake.rs"
test = false
doc = false
bench = false
