[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "tinyplace"
version = "0.1.0"
description = "Async Python REST SDK for tiny.place"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "GPL-3.0-or-later" }
authors = [{ name = "TinyHumans AI" }]
dependencies = [
  "aiohttp>=3.9",
  "PyNaCl>=1.5",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
]

[tool.hatch.build.targets.wheel]
packages = ["src/tinyplace"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
